# banking

./: .bazelrc  .gitignore  BUILD.bazel  Dockerfile  LICENSE  MODULE.bazel  README.md  requirements.txt  requirements_lock.txt
server/: BUILD  app.py
