module(name = "banking", version = "0.0.0")

bazel_dep(name = "rules_python", version = "0.24.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

python.toolchain(
    python_version = "3.11",
    is_default = True,
)

use_repo(python, "python_3_11", "python_versions")

pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)

use_repo(pip, "pip_311", "pip")